--- a/PostaMD/Base.lproj/Main.storyboard
+++ b/PostaMD/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="iMy-m1-Cy5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="iMy-m1-Cy5">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,11 +22,14 @@
                                 <rect key="frame" x="0.0" y="22" width="375" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gbs-X4-gZd" id="hvw-Vk-jEz">
-                                    <rect key="frame" x="0.0" y="0.0" width="342" height="74"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="342" height="74.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="unread" translatesAutoresizingMaskIntoConstraints="NO" id="daR-Kp-ngQ">
                                             <rect key="frame" x="8" y="29.5" width="16" height="16"/>
+                                        </imageView>
+                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="Fetch_Error" translatesAutoresizingMaskIntoConstraints="NO" id="DsO-ad-XRW" userLabel="Error">
+                                            <rect key="frame" x="10" y="29" width="16" height="16"/>
                                         </imageView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VHT-dP-uUg">
                                             <rect key="frame" x="16" y="5.5" width="321" height="64"/>
@@ -82,7 +85,9 @@
                                     </subviews>
                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
+                                        <constraint firstItem="DsO-ad-XRW" firstAttribute="leading" secondItem="hvw-Vk-jEz" secondAttribute="leading" constant="10" id="Cvf-2f-1zd"/>
                                         <constraint firstItem="daR-Kp-ngQ" firstAttribute="centerY" secondItem="hvw-Vk-jEz" secondAttribute="centerY" id="H5I-jY-apn"/>
+                                        <constraint firstItem="DsO-ad-XRW" firstAttribute="centerY" secondItem="hvw-Vk-jEz" secondAttribute="centerY" id="I1m-4L-FAT"/>
                                         <constraint firstAttribute="trailing" secondItem="VHT-dP-uUg" secondAttribute="trailing" constant="5" id="TCC-kp-Y8k"/>
                                         <constraint firstItem="VHT-dP-uUg" firstAttribute="centerY" secondItem="hvw-Vk-jEz" secondAttribute="centerY" id="U8s-BD-Hxy"/>
                                         <constraint firstItem="VHT-dP-uUg" firstAttribute="leading" secondItem="hvw-Vk-jEz" secondAttribute="leading" constant="16" id="pdP-cK-ymb"/>
@@ -92,6 +97,7 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="containerLeadingConstraint" destination="pdP-cK-ymb" id="RlC-D3-ga5"/>
+                                    <outlet property="ivError" destination="DsO-ad-XRW" id="qD6-oa-dMd"/>
                                     <outlet property="ivUnread" destination="daR-Kp-ngQ" id="Ygi-JU-Jtj"/>
                                     <outlet property="lastTrackingInfoHeightConstraint" destination="lhV-oo-PYg" id="f9u-Vx-8LY"/>
                                     <outlet property="lbLastTrackingInfo" destination="bU2-db-VP5" id="CKS-6h-hdj"/>
@@ -256,7 +262,7 @@
                                 <rect key="frame" x="0.0" y="74" width="375" height="87"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ut3-Sz-9ak" id="PcD-qg-Zay">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="86"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="86.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="248" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dLS-VC-RbW">
@@ -441,6 +447,7 @@
     </scenes>
     <resources>
         <image name="ExpandTrackInfo" width="16" height="16"/>
+        <image name="Fetch_Error" width="16" height="16"/>
         <image name="info" width="28" height="28"/>
         <image name="unread" width="16" height="16"/>
     </resources>
